# AIFreshFoodAssistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.cloud.yml  requirements.txt  run.py  view_memory.py
.tmp/AIFreshFoodAssistant-mcp-dev/: .dockerignore  .gitignore  Dockerfile  README.md  data_access.py  pyproject.toml  seed.py  server.py  smoke_test.py
.tmp/AIFreshFoodAssistant-mcp-dev/data/: fresh_food_dev.sqlite3  seed-products.json
backend/: __init__.py  agent.py  config.py  data_loader.py  image_engine.py  llm_engine.py  main.py  mcp_client.py  memory.py  skills.py
data/: sample_inventory.csv  test_store_s1_rainy.json  test_store_s2_hot.json  test_store_s3_weekend.json  test_store_s4_winter.json
demo/: data.js  index.html  recipe.html
deploy/: app.env.example
frontend/: dmall-member.html  index.html  recipe-images.html  recommendation-history.html  store-dashboard.html
memory/: memory.db
spec/: 产品规格文档.md
